# spicedb-client-rust

./: Cargo.toml  Makefile.toml  README.md  build.rs
src/: lib.rs
