[package]
name = "authzed"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.4"
prost-types = "0.12.4"
tonic = "0.11"

[build-dependencies]
glob = "0.3.1"
tonic-build = "0.11"


[features]
client = []
default = ["client", "v1"]
server = []
v0 = []
v1 = []
v1alpha1 = []